* https://github.com/vorple/inform7/blob/master/CHANGES

The numbers after the items refer to GitHub issues. (inform #xx) refers to issue
number xx in the Inform extensions/libraries repositories.


Release 4.1.0 (2022-)
==========================

- When evaluating JavaScript code that returns a promise, Vorple now waits until
  the promise is resolved and passes its return value to Inform
- Interpreter name is now "Vorple" instead of "Quixe" in the web document title


Release 4.0.1 (2022-06-26)
==========================

- Fixed npm package not working correctly in React/Webpack projects (#57)


Release 4.0.0 (2022-05-11)
==========================

- Codebase converted to Typescript
- In the npm package, the "src" directory now contains the original Typescript
  source code, "dist" contains the compiled JavaScript code, and "web" contains
  the interpreter package that used to be in "dist"
- Replaced imports from the "path" module to BrowserFS's equivalent to avoid
  having to include path-browserify when using Vorple as an npm package


Release 3.2.8 (2022-04-25)
==========================

- Added method vorple.checkVersion() to replace vorple.requireVersion() which
  is now still included but deprecated and shouldn't be used anymore
- Added an optional parameter to vorple.debug.toggle() to set the debug flag
  to a specific state instead of flipping the current state
- Fixed status line being transparent
- Fixed vorple.file.info() possibly returning false instead of null in some 
  cases when reading a file failed
- Fixed audio queue not respecting the looping flag of upcoming tracks
- Fixed vorple.audio.fadeOut() not passing the success boolean to the callback
  parameter as documented
- Fixed a typo in vorple.audio.setPlaylist() parameters documentation
  (shuffle -> shuffled)


Release 3.2.7 (2022-04-11)
==========================

- Fixed a bug that prevented saving and restoring games


Release 3.2.6 (2022-02-17)
==========================
